fixed spacing

--- a/public/styles/loggedin.css
+++ b/public/styles/loggedin.css
@@ -103,7 +103,7 @@ hr {
   color: #ffffff;
   border-radius: 4%;
   margin-bottom: 1%;
-  width: 15%;
+  width: 23%;
 }
 
 .Button-Dropdown {
